<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="workspaceViewModel"
            type="co.table.agent.android.workspace.WorkspaceDataViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreenBG"
        android:orientation="vertical"
        tools:context=".workspace.AccountSettingActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorScreenBG"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="180dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/ic_logo" />

                <co.table.agent.android.views.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorLoginDesc"
                    android:text="@string/login_description"
                    app:customFont="regular" />

                <co.table.agent.android.views.CustomInputTextLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/workspace"
                    android:layout_marginTop="50dp"
                    app:customFont="regular">

                    <co.table.agent.android.views.CustomEditText
                        android:id="@+id/edtWorkspace"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/colorHint"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        app:customFont="regular" />
                </co.table.agent.android.views.CustomInputTextLayout>

                <co.table.agent.android.views.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_background"
                    android:onClick="onNextClick"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:alpha="@{workspaceViewModel.isNextEnable?1.0f:0.5f}"
                    android:enabled="@{workspaceViewModel.isNextEnable}"
                    app:customFont="bold"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>